<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.guide.GuideFragment"
    android:padding="16dp">

    <!-- App Logo -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="65dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/germany_app_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Title -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFE900"
        android:fontFamily="@font/skranji"
        android:gravity="center"
        android:text="@string/guide_TITLE"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guide_greeting"/>

    <!-- greeting -->
    <TextView
        android:id="@+id/guide_greeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/guide_greeting"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/scroll_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <!-- Scrollable Content -->
    <ScrollView
        android:id="@+id/scroll_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/guide_greeting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guide_farewell">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- első lépések -->
            <TextView
                android:id="@+id/guide_p1_h1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p1_h1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guide_p1_h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p1_h2"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guide_p1_h2_t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p1_h2_t1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/guide_p1_h2_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p1_h2_2"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/guide_p1_h2_2_t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p1_h2_2_t1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <!-- ////////////////////////////////////// -->


            <!-- fő funkciók -->
            <TextView
                android:id="@+id/guide_p2_h1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/guide_p2_h1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/guide_p2_h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p2_h2"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guide_p2_h2_t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p2_h2_t1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/guide_p2_h2_t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p2_h2_t2"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/guide_p2_h2_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p2_h2_2"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guide_p2_h2_2_t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p2_h2_2_t1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/guide_p2_h2_2_t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p2_h2_2_t2"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/guide_p2_h2_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p2_h2_3"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guide_p2_h2_3_t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p2_h2_3_t1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <!-- ////////////////////////////////////// -->


            <!-- navigációs tippek -->
            <TextView
                android:id="@+id/guide_title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/guide_title3"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Navigációs fiók -->
            <TextView
                android:id="@+id/guide_p3_h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p3_h2"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guide_p3_h2_t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p3_h2_t1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <!-- Keresés a szókincsben -->
            <TextView
                android:id="@+id/guide_p3_h2_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p3_h2_2"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guide_p3_h2_2_t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p3_h2_2_t1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <!-- Szavak szerkesztése -->
            <TextView
                android:id="@+id/guide_p3_h2_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p3_h2_2"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guide_p3_h2_3_t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p3_h2_3_t1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <!-- Szavak törlése -->
            <TextView
                android:id="@+id/guide_p3_h2_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p3_h2_4"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guide_p3_h2_4_t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p3_h2_4_t1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <!-- ////////////////////////////////////// -->


            <!-- hibaelhárítás -->
            <TextView
                android:id="@+id/guide_title4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/guide_title4"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guide_p4_h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p4_h2"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guide_p4_h2_t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p4_h2_t1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/guide_p4_h2_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p4_h2_2"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/guide_p4_h2_2_t1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_p4_h2_2_t1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/guide_farewell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/guide_farewell"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_content" />

</androidx.constraintlayout.widget.ConstraintLayout>