<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="7dp"
    android:id="@+id/myToolbar"
    android:background="@color/white"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="65dp"
        android:layout_height="62dp"
        android:layout_gravity="center|top"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/germany_app_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/skranji"
        android:layout_gravity="center_horizontal|top"
        android:gravity="center"
        android:text="@string/add_TITLE"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        android:background="#FFE900"/>

    <EditText
        android:id="@+id/edName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/add_word"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edArticle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/add_word_article"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edWordType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/add_word_type"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edPlural"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/add_word_plural"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edMeaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/add_word_meaning"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnAdd"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/add_BUTTON"
            android:layout_marginEnd="8dp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

</LinearLayout>
