<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_vocabulary">

    <fragment
        android:id="@+id/nav_add"
        android:name="com.example.language_learning_assistant.ui.add.AddFragment"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/nav_vocabulary"
        android:name="com.example.language_learning_assistant.ui.vocabulary.VocabularyFragment"
        android:label="@string/menu_vocabulary"
        tools:layout="@layout/fragment_vocabulary">

        <!-- Define action to navigate to AddFragment -->
        <action
            android:id="@+id/action_nav_vocabulary_to_nav_add"
            app:destination="@id/nav_add" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.language_learning_assistant.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>